--- a/portfolio-index-style.css
+++ b/portfolio-index-style.css
@@ -1,6 +1,9 @@
 html {
 	margin: auto;
 }
+body {
+	margin: 0px;
+}
 
 .header {
 	background-color: black;
@@ -16,21 +19,38 @@ html {
 
 ul {
 	float: left;
-	margin-bottom: 20px;
+
 }
 
 .top_nav li {
-	margin: 40px;
+	margin: 40px 40px 0 40px;
 	left: 100px;
 	list-style-type: none;
 	display: inline;
 	position: relative;
-	bottom: 20px;
 	font-size: 16px;
 	text-transform: uppercase;
 	top: 8px;
 	color: white;
+	padding: 10px;
 
+}
+
+.hideP{
+	position: inline;
+}
+
+
+.drivingphoto{
+	position: inline;
+}
+
+.hideP:hover {
+	display: none;
+}
+
+.drivingphoto:hover {
+	opacity: .5;
 }
 
 li:hover {
@@ -48,18 +68,22 @@ a {
 
 
 }
-.container > p {
+.container {
 	height: 900px;
 	width: 1200px;
 	font-size: 36px;
 	color: white;
 	background-image: url(spartan-symbol.png);
+	position: relative;
 }
 
 .aboutme-container > p > a {
 	color: green;
 }
 
+.container > p {
+	margin-top: 0px;
+}
 
 .aboutme-container > p > img {
 	float: left;
